--- a/home.html
+++ b/home.html
@@ -96,12 +96,12 @@
             <div class="section">
                 <h2>Vezetői elkötelezettség</h2>
                 <p>A felső vezetés biztosítsa az innováció fontosságát és támogassa annak beágyazását. </p>
-                <a href="management_engagement.html">Tovább az oldalra →</a>
+                <a href="management-engagement.html">Tovább az oldalra →</a>
             </div>
             <div class="section">
                 <h2>Kultúra fejlesztése</h2>
                 <p>Növelje a kreativitást, nyitottságot és kockázatvállalási hajlandóságot a szervezetben</p>
-                <a href="ulture_development>Tovább az oldalra →</a>
+                <a href="culture-development>Tovább az oldalra →</a>
             </div>
             <div class="section">
                 <h2>Képzés és ösztönzés</h2>
@@ -115,7 +115,7 @@
             <div class="section">
                 <h2>Célok meghatározása</h2>
                 <p>Hozzon létre mérhető innovációs célokat.</p>
-                <a href="goal_definition.html">Tovább az oldalra →</a>
+                <a href="goal-definition.html">Tovább az oldalra →</a>
             </div>
             <div class="section">
                 <h2>Kockázatok és lehetőségek kezelése</h2>
@@ -149,7 +149,7 @@
             <div class="section">
                 <h2>Megoldások fejlesztése</h2>
                 <p>Fejlessze ki a végleges megoldásokat, és alakítsa ki a megvalósításhoz szükséges képességeket.</p>
-                <a href="concept-validation.html">Tovább az oldalra →</a>
+                <a href="solution-development.html">Tovább az oldalra →</a>
             </div>
         </div>
         <div class="section" id="introduction">
@@ -182,12 +182,12 @@
             <div class="section">
                 <h2>Felülvizsgálat</h2>
                 <p>A vezetők rendszeresen vizsgálják felül az innovációs rendszert, és hozzanak döntéseket a fejlesztésről.</p>
-                <a href="management_review.html">Tovább az oldalra →</a>
+                <a href="management-review.html">Tovább az oldalra →</a>
             </div>
             <div class="section">
                 <h2>Fejlesztési terv készítése</h2>
                 <p>Az innovációs rendszer javítása érdekében készítsen új terveket.</p>
-                <a href="development_plan.html">Tovább az oldalra →</a>
+                <a href="development-plan.html">Tovább az oldalra →</a>
             </div>
         </div>
     </div>
