--- a/environment-analysis.html
+++ b/environment-analysis.html
@@ -18,6 +18,8 @@
         <div class="header">
             <h1>Környezet Elemzési Modul</h1>
             <p>Töltse fel és elemezze a releváns adatokat</p>
+        </div>
+        <div>
             <p>A szervezetnek meg kell értenie az őt körülvevő külső környezetet, ideértve a piacokat, technológiai trendeket, szabályozásokat és versenytársakat. Ezenkívül azonosítani kell a belső tényezőket, például a kultúrát, a vezetői képességeket és az erőforrásokat, amelyek befolyásolhatják az innováció sikerességét. A környezet elemzése segít feltárni azokat a lehetőségeket és kockázatokat, amelyek meghatározzák az innovációs rendszer kiindulópontját. </p>
         </div>
         <form action="/upload" method="POST" enctype="multipart/form-data">
