--- a/stakeholders.html
+++ b/stakeholders.html
@@ -15,7 +15,12 @@
 </head>
 <body>
     <div class="container">
-        <h1>Érdekelt felek kezelése</h1>
+        <div class="header">
+            <h1>Érdekelt felek kezelése</h1>
+        </div>
+        <div>
+            <p>Az érdekelt felek – például ügyfelek, alkalmazottak, partnerek és tulajdonosok – igényeinek megértése elengedhetetlen az értékteremtéshez. Az igények és elvárások azonosítása segít abban, hogy az innováció ne csak ötletek szintjén maradjon, hanem gyakorlati előnyöket hozzon létre. A szervezet ezzel bizalmat építhet és erősítheti piaci pozícióját.</p>
+        </div>
         <form action="/stakeholders" method="POST">
             <label for="stakeholder-name">Érdekelt fél neve:</label>
             <input type="text" id="stakeholder-name" name="stakeholder-name" placeholder="Pl.: Ügyfél A">
