--- a/stakeholders.html
+++ b/stakeholders.html
@@ -9,7 +9,7 @@
         .container { max-width: 800px; margin: 0 auto; padding: 20px; }
         .header { text-align: center; margin-bottom: 20px; }
         label, input, textarea, select { display: block; width: 100%; margin: 10px 0; }
-        button { background-color: #4CAF50; color: white; border: none; padding: 10px 15px; cursor: pointer; }
+        button { background-color: #4c95af; color: white; border: none; padding: 10px 15px; cursor: pointer; }
         button:hover { background-color: #45a049; }
     </style>
 </head>
