--- a/management-engagement.html
+++ b/management-engagement.html
@@ -4,10 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vezetői Elkötelezettség</title>
+    <style>
+        body { font-family: Arial, sans-serif; }
+        .container { max-width: 800px; margin: 0 auto; padding: 20px; }
+        .header { text-align: center; margin-bottom: 20px; }
+        label, input, textarea, select { display: block; width: 100%; margin: 10px 0; }
+        button { background-color: #4c95af; color: white; border: none; padding: 10px 15px; cursor: pointer; }
+        button:hover { background-color: #45a049; }
+    </style>
 </head>
 <body>
     <div class="container">
-        <h1>Vezetői Elkötelezettség</h1>
+        <div class="header">
+            <h1>Vezetői Elkötelezettség</h1>
+        </div>
+        <div>
+                <p>A vezetők példaként szolgálnak az innováció támogatásában, ezzel ösztönözve a szervezet tagjait. A vezetők felelőssége, hogy biztosítsák az erőforrásokat és előmozdítsák az újító szemléletet. Az elkötelezettség hiánya gyakran az innovációs erőfeszítések kudarcához vezet, ezért kulcsfontosságú az erős vezetői támogatás.</p>
+        </div>
         <form action="/leadership-commitment" method="POST">
             <label for="leader-message">Vezetői nyilatkozat:</label>
             <textarea id="leader-message" name="leader-message" rows="5" placeholder="Írja ide a vezetői üzenetet..."></textarea>
