--- a/innovation-intent.html
+++ b/innovation-intent.html
@@ -19,7 +19,7 @@
             <h1>Innovációs Szándék Rögzítése</h1>
         </div>
         <div>
-            <p>A szervezetnek meg kell értenie az őt körülvevő külső környezetet, ideértve a piacokat, technológiai trendeket, szabályozásokat és versenytársakat. Ezenkívül azonosítani kell a belső tényezőket, például a kultúrát, a vezetői képességeket és az erőforrásokat, amelyek befolyásolhatják az innováció sikerességét. A környezet elemzése segít feltárni azokat a lehetőségeket és kockázatokat, amelyek meghatározzák az innovációs rendszer kiindulópontját. </p>
+            <p>Az innovációs szándék meghatározása biztosítja, hogy az innováció összhangban legyen a szervezet stratégiájával. Ez az irányelv tartalmazza azokat az elképzeléseket, amelyek az innováció értéket teremtő szerepét tisztázzák. Egy jól megfogalmazott szándék motiválja a csapatokat és egyértelmű útmutatást nyújt az egész szervezet számára.</p>
         </div>
         <form action="/innovation-intent" method="POST">
             <label for="intent">Innovációs szándék megfogalmazása:</label>
