--- a/home.html
+++ b/home.html
@@ -95,12 +95,12 @@
             <p>Ez a lépés az innovációs rendszer megalapozására irányul. A szervezetnek fel kell térképeznie külső környezetét, például a piacokat, technológiai trendeket és jogi környezetet, valamint belső adottságait, mint a kultúra, erőforrások és képességek. Az érdekelt felek – ügyfelek, partnerek, alkalmazottak – igényeinek és elvárásainak megértése kulcsfontosságú, hogy az innováció valódi értéket teremtsen. Az innovációs szándék megfogalmazása világos irányt szab az innovációs tevékenységeknek, összhangban a szervezet stratégiai céljaival. Ez a lépés biztosítja, hogy az innováció nemcsak ötletszinten maradjon, hanem szervesen illeszkedjen a vállalat stratégiájába. </p>
             <div class="section">
                 <h2>Vezetői elkötelezettség</h2>
-                <p>A felső vezetés biztosítsa az innováció fontosságát és támogassa annak beágyazását. </p>
+                <p>A felső vezetés biztosítsa az innováció fontosságát és támogassa annak beágyazását.</p>
                 <a href="management-engagement.html">Tovább az oldalra →</a>
             </div>
             <div class="section">
                 <h2>Kultúra fejlesztése</h2>
-                <p>Növelje a kreativitást, nyitottságot és kockázatvállalási hajlandóságot a szervezetben</p>
+                <p>Növelje a kreativitást, nyitottságot és kockázatvállalási hajlandóságot a szervezetben.</p>
                 <a href="culture-development>Tovább az oldalra →</a>
             </div>
             <div class="section">
