--- a/home.html
+++ b/home.html
@@ -101,7 +101,7 @@
             <div class="section">
                 <h2>Kultúra fejlesztése</h2>
                 <p>Növelje a kreativitást, nyitottságot és kockázatvállalási hajlandóságot a szervezetben.</p>
-                <a href="culture-development>Tovább az oldalra →</a>
+                <a href="culture-development">Tovább az oldalra →</a>
             </div>
             <div class="section">
                 <h2>Képzés és ösztönzés</h2>
