--- a/resource-provision.html
+++ b/resource-provision.html
@@ -4,10 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Erőforrások Biztosítása</title>
+    <style>
+        body { font-family: Arial, sans-serif; }
+        .container { max-width: 800px; margin: 0 auto; padding: 20px; }
+        .header { text-align: center; margin-bottom: 20px; }
+        label, input, textarea, select { display: block; width: 100%; margin: 10px 0; }
+        button { background-color: #4c95af; color: white; border: none; padding: 10px 15px; cursor: pointer; }
+        button:hover { background-color: #45a049; }
+    </style>
 </head>
 <body>
     <div class="container">
-        <h1>Erőforrások Biztosítása</h1>
+        <div class="header">
+            <h1>Erőforrások Biztosítása</h1>
+        </div>
+        <div>
+            <p>Az innovációhoz szükséges erőforrások – mint a pénzügyi, humán és technológiai források – hozzárendelése létfontosságú a célok eléréséhez. Az erőforrások megfelelő elosztása biztosítja, hogy a projektek a tervek szerint haladjanak.</p>
+        </div>
         <form action="/allocate-resources" method="POST">
             <label for="resource-type">Erőforrás típusa:</label>
             <select id="resource-type" name="resource-type">
