--- a/home.html
+++ b/home.html
@@ -134,7 +134,7 @@
             <div class="section">
                 <h2>Lehetőségek azonosítása</h2>
                 <p>Gyűjtse össze a releváns ötleteket és problématerületeket.</p>
-                <a href="environment-analysis.html">Tovább az oldalra →</a>
+                <a href="opportunities.html">Tovább az oldalra →</a>
             </div>
             <div class="section">
                 <h2>Koncepciók kidolgozása</h2>
