--- a/opportunities.html
+++ b/opportunities.html
@@ -4,10 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lehetőség Menedzser</title>
+    <style>
+        body { font-family: Arial, sans-serif; }
+        .container { max-width: 800px; margin: 0 auto; padding: 20px; }
+        .header { text-align: center; margin-bottom: 20px; }
+        label, input, textarea, select { display: block; width: 100%; margin: 10px 0; }
+        button { background-color: #4c95af; color: white; border: none; padding: 10px 15px; cursor: pointer; }
+        button:hover { background-color: #45a049; }
+    </style>
 </head>
 <body>
     <div class="container">
-        <h1>Innovációs Lehetőségek</h1>
+        <div class="header">
+            <h1>Innovációs Lehetőségek</h1>
+        </div>
+        <div>
+            <p>Az innovációs lehetőségek feltárása magában foglalja az igények, problémák és piaci trendek azonosítását. Ez a lépés kulcsfontosságú az új ötletek és megoldások generálásában.</p>
+        </div>
         <form action="/opportunities" method="POST">
             <label for="opportunity">Új lehetőség leírása:</label>
             <textarea id="opportunity" name="opportunity" rows="5" placeholder="Írja le az innovációs lehetőséget..."></textarea>
