--- a/concept-validation.html
+++ b/concept-validation.html
@@ -4,10 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Validációs Modul</title>
+    <style>
+        body { font-family: Arial, sans-serif; }
+        .container { max-width: 800px; margin: 0 auto; padding: 20px; }
+        .header { text-align: center; margin-bottom: 20px; }
+        label, input, textarea, select { display: block; width: 100%; margin: 10px 0; }
+        button { background-color: #4c95af; color: white; border: none; padding: 10px 15px; cursor: pointer; }
+        button:hover { background-color: #45a049; }
+    </style>
 </head>
 <body>
     <div class="container">
-        <h1>Koncepció Validálása</h1>
+        <div class="header">
+            <h1>Koncepció Validálása</h1>
+        </div>
+        <div>
+            <p>A koncepciók tesztelése és finomítása során azonosítják és csökkentik a kritikus kockázatokat. A validálás célja, hogy megbizonyosodjanak arról, hogy az ötletek életképesek és relevánsak.</p>
+        </div>
         <form action="/validate-concept" method="POST">
             <label for="concept-select">Válasszon koncepciót:</label>
             <select id="concept-select" name="concept-id">
