--- a/solution-development.html
+++ b/solution-development.html
@@ -4,10 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Megoldások Fejlesztése</title>
+    <style>
+        body { font-family: Arial, sans-serif; }
+        .container { max-width: 800px; margin: 0 auto; padding: 20px; }
+        .header { text-align: center; margin-bottom: 20px; }
+        label, input, textarea, select { display: block; width: 100%; margin: 10px 0; }
+        button { background-color: #4c95af; color: white; border: none; padding: 10px 15px; cursor: pointer; }
+        button:hover { background-color: #45a049; }
+    </style>
 </head>
 <body>
     <div class="container">
-        <h1>Megoldások Fejlesztése</h1>
+        <div class="header">
+            <h1>Megoldások Fejlesztése</h1>
+        </div>
+        <div>
+            <p>A validált ötleteket végső megoldásokká fejlesztik, beleértve a gyártási és terjesztési terveket. Ez a lépés biztosítja, hogy a megoldások készen álljanak a bevezetésre.</p>
+        </div>
         <form action="/develop-solutions" method="POST">
             <label for="validated-concept">Válasszon validált koncepciót:</label>
             <select id="validated-concept" name="validated-concept">
