--- a/introduction-support.html
+++ b/introduction-support.html
@@ -4,10 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bevezetési Támogató</title>
+    <style>
+        body { font-family: Arial, sans-serif; }
+        .container { max-width: 800px; margin: 0 auto; padding: 20px; }
+        .header { text-align: center; margin-bottom: 20px; }
+        label, input, textarea, select { display: block; width: 100%; margin: 10px 0; }
+        button { background-color: #4c95af; color: white; border: none; padding: 10px 15px; cursor: pointer; }
+        button:hover { background-color: #45a049; }
+    </style>
 </head>
 <body>
     <div class="container">
-        <h1>Innováció Bevezetése</h1>
+        <div class="header">
+            <h1>Innováció Bevezetése</h1>
+        </div>
+        <div>
+            <p>A megoldások bevezetése során a szervezet biztosítja, hogy az innováció elérje a célcsoportot. Ez magában foglalja a promóciót, támogatást és a gyakorlati megvalósítást.</p>
+        </div>
         <form action="/launch" method="POST">
             <label for="solution-name">Megoldás neve:</label>
             <input type="text" id="solution-name" name="solution-name" placeholder="Pl.: Új ügyfélportál">
