--- a/development-plan.html
+++ b/development-plan.html
@@ -4,10 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fejlesztési Terv</title>
+    <style>
+        body { font-family: Arial, sans-serif; }
+        .container { max-width: 800px; margin: 0 auto; padding: 20px; }
+        .header { text-align: center; margin-bottom: 20px; }
+        label, input, textarea, select { display: block; width: 100%; margin: 10px 0; }
+        button { background-color: #4c95af; color: white; border: none; padding: 10px 15px; cursor: pointer; }
+        button:hover { background-color: #45a049; }
+    </style>
 </head>
 <body>
     <div class="container">
-        <h1>Fejlesztési Terv</h1>
+        <div class="header">
+            <h1>Fejlesztési Terv</h1>
+        </div>
+        <div>
+            <p>A visszacsatolások alapján új terveket készítenek az innovációs rendszer javítására. Ez a lépés biztosítja a folyamatos fejlődést és a szervezet hosszú távú versenyképességét.</p>
+        </div>
         <form action="/development-plan" method="POST">
             <label for="objective">Fejlesztési cél:</label>
             <input type="text" id="objective" name="objective" placeholder="Pl.: Hatékonyság növelése">
